Version 2.1.83
    Updated hu_HU locale (thanks andris155)
    (FIX) Arrow Retrieval will no longer work with piercing enchant on crossbows

Version 2.1.82
    Added new WG flag 'mcmmo-hardcore' if set to negative players will not be penalized by hardcore mode (if hardcore mode is enabled) it defaults to true
    Added proper error handling when loading parties file
    Fixed an error that could occur when using mcrank on an offline player
    You can now use mcrank on offline players by default
    You can now use inspect on offline players by default
    Removed the offline inspect/mcrank permissions
    Updated Chinese locale (thanks to the user named 89009332 from github)
    Added some redundancy checks when loading profiles (NPC checks to be specific)

    NOTES:
    There were reasons to prevent inspecting offline players in the past, I don't see any reason for them anymore so I've removed the restriction.

Version 2.1.81
    Fixed a bug where Arrow Deflect would never trigger outside of PVP
    Fixed a bug where failing to salvage enchantments incorrectly colored the text
    mcMMO no longer allows players to keep enchantments exceeding normal limitations by default when salvaging or repairing (you can turn this off in the config, see below)
    Added new setting 'ExploitFix.UnsafeEnchantments' to experience.yml, turn this on to allow players to salvage/repair enchantments higher than normal game restrictions

    NOTES:
    If a player tries to salvage/repair an item with an illegal enchant (for example Sharpness X) it will downgrade that item to the highest legal version when calculating rewards
    If you don't like this change you can turn it off in experience.yml under 'ExploitFix.UnsafeEnchantments'


Version 2.1.80
    (Fix) mcMMO now respects the NBT "Unbreakable" tag and does not deal durability damage to items with that tag

Version 2.1.79
    Updated Japanese locale (Thanks snake0053)