@@ -1,6 +1,8 @@
 Version 2.1.83
     Updated hu_HU locale (thanks andris155)
     (FIX) Arrow Retrieval will no longer work with piercing enchant on crossbows
+    WG Flags should now correctly recognize when a projectile belongs to a player and respect flag settings
+    You can no longer set party members on fire with your bow
 
 Version 2.1.82
     Added new WG flag 'mcmmo-hardcore' if set to negative players will not be penalized by hardcore mode (if hardcore mode is enabled) it defaults to true
